# DNA

./: .env  .local.env  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: CHANGELOG.md  README.md  RELEASE.md  groq_main.py  main.py  pyproject.toml  pytest.ini
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/.github/workflows/: README.md  ci.yml  publish.yml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 073de19eaa46_create_project_table.py
backend/app/core/: config.py  container.py  i_generic_repository.py
backend/app/core/models/: auditable_entity.py  entity.py  project.py
backend/app/domain/models/: auditable_entity.py  project.py
backend/app/engine/: README.md
backend/app/engine/graph/: graph.py  graph_event.py
backend/app/engine/interfaces/: graph_event.py  i_middleware.py  i_observer.py  i_processor.py  i_subject.py  İ_middleware.py
backend/app/engine/nodes/: base_node.py
backend/app/engine/nodes/condition/: switch_node.py  switch_processor.py
backend/app/engine/nodes/http/: http_middleware.py  http_node.py  http_processor.py
backend/app/engine/nodes/mapper/: README.md  __init__.py  (+3 more)
backend/app/infra/repository/: generic_repository.py  project_repository.py
backend/app/utils/: cryptography.py
backend/dna_core/: __init__.py
backend/dna_core/engine/: __init__.py
backend/dna_core/engine/graph/: graph.py  graph_event.py
backend/dna_core/engine/interfaces/: __init__.py  i_middleware.py  i_processor.py  i_subject.py
backend/dna_core/engine/nodes/: __init__.py
backend/mocks/database/: in_memory.py
backend/scripts/: bump_version.py
backend/tests/core/models/: test_project_entity.py
(+64 files in other folders)
