[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dna-core"
version = "0.1.2"
description = "Event-driven graph engine for building data processing pipelines"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Proprietary"}
authors = [
    {name = "Fatih Akkuş", email = "whitebirdsdk@gmail.com"},
    {name = "Rabia Akkuş", email = "rabia.akkus@gmail.com"},
    {name = "Muhammed Esad Doğan", email = "esad@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.12.7",
    "aiomqtt>=2.0.0",
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "google-adk>=0.1.0",
    "jmespath>=1.0.1",
    "json-logic-qubit>=0.9.1",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests>=2.32.3",
    "ruff>=0.11.5",
]

[tool.hatch.build.targets.wheel]
packages = ["dna_core"]
exclude = ["main.py", ".venv", "*.pyc", "__pycache__", "*.egg-info"]