[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.7",
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "google-adk>=0.1.0",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests>=2.32.3",
    "ruff>=0.11.5",
    "sqlmodel>=0.0.24",
]
